--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         </section>
     </main>
     <footer></footer>
-    <script src="/assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
